--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+      "dev": "mix",
+      "watch": "mix watch",
+      "hot": "mix watch --hot",
+      "prod": "mix --production"
     },
     "devDependencies": {
-        "cross-env": "^5.0.0",
-        "laravel-mix": "^1.0"
+      "cross-env": "^7.0.3",
+      "laravel-mix": "^6.0.27",
+      "postcss": "^8.3.6",
+      "prettier": "^2.3.2",
+      "resolve-url-loader": "^4.0.0",
+      "sass": "^1.37.5",
+      "sass-loader": "^12.1.0",
+      "vue-loader": "^15.9.8",
+      "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "laravel-nova": "^1.0.9",
-        "vue": "^2.5.0"
+      "laravel-nova": "^1.12.3",
+      "vue": "^2.6.14"
     }
-}
+  }
